@@ -1,1 +1,0 @@
-ACTION=="add|change", KERNEL=="vboxguest", ENV{ID_INPUT}="1", ENV{ID_INPUT_MOUSE}="1"
