@@ -4,6 +4,8 @@ virtualbox (4.1.4-dfsg-1) UNRELEASED; urgency=low
     - Fixes missing icons when using pt_BR locale. (Closes: #507188)
     - Fixes guest additions download url. (Closes: #637349; LP: #840668)
   * Refresh patches.
+  * Drop the vboxmouse x11 driver. The mouse integration is now completely
+    handled by the kernel module.
   * Restrict dh_pycentral to the virtualbox binary package.
   * Merge changes from the Ubuntu package but use them only when built
     on Ubuntu:
